# finx

./: .gitignore  README.md  directory_mapping.yaml  directory_mapping.yml  finx_dummy.yml  finx_entities.yml  pyproject.toml  rename_class.py  tax_document_patterns_base.yaml  tax_document_patterns_dummy.yml
.cursor/rules/: general.mdc  python-code.mdc
.github/workflows/: tests.yml
backlog/: index.md
backlog/bugs/: 2025-05-05_fix-pyzipper-tests-recursion.md
backlog/documentation/: 2025-05-05_encryption-documentation.md
backlog/features/: 2025-05-05_encryption-cli-options.md
backlog/infrastructure/: 2025-05-05_encryption-integration-tests.md  2025-05-05_github-actions-encryption-testing.md
cip/: README.md  cip0001.md  cip0002.md  cip0003.md
docs/: common_workflows.md  dual_id_migration.md  testing_guidelines.mdc  usage.md
finx/: __init__.py  archive.py  checker.py  cli.py  cli_argparse.py  cli_typer.py  entities.py
tax_assistant/: __init__.py  checker.py  cli.py
tax_assistant/scripts/: __init__.py  zip_tax_documents.py
tax_document_checker/: __init__.py  checker.py  cli.py
tax_document_lister/: __init__.py  checker.py  cli.py
tests/: test_archive.py  test_checker.py  test_cli.py  test_cli_functionality.py  test_config_integration.py  test_entities.py
