[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "finx"
version = "0.1.0"
description = "A tool for listing and checking finances"
authors = ["Neil Lawrence <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "finx"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pyyaml = "^6.0"
pathlib = "^1.0.1"
typer = "^0.9.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^24.3.0"
isort = "^5.0"
flake8 = "^6.0"

[tool.poetry.scripts]
finx = "finx.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
markers = [
    "integration: marks tests that perform integration testing with real files and system calls"
]

[tool.black]
line-length = 100
target-version = ["py36"]

[tool.isort]
profile = "black"
line_length = 100